# assignment

./: .env.example  .gitignore  ASSIGNMENT.md  Makefile  README.md  pyproject.toml
backend/: bus.py  db.py  decoder.py  llm.py  main.py  orchestrator.py  render_markdown.py  schema.py
backend/agents/: data_analyst.py  direct_llm.py  lead.py  openhands_adapter.py  report_writer.py  sub_agent.py  web_researcher.py
backend/tools/: ask_user.py  tavily_search.py  write_artifact.py
design/: one-pager.md
docs/superpowers/plans/: 2026-05-25-deep-analyst-openhands.md
docs/superpowers/specs/: 2026-05-25-deep-analyst-openhands-design.md
streamlit_app/: api_client.py  app.py  state.py
streamlit_app/components/: artifacts_tab.py  ask_user_form.py  chat_column.py  trace_tree.py
tests/: test_agents_prompts.py  test_api.py  test_bus.py  test_db.py  test_decoder.py  test_direct_llm.py  test_llm.py  test_node_tree.py  test_orchestrator.py  test_render_snapshot.py  test_schema.py  test_subagent_runner.py  test_tools_ask_user.py  test_tools_tavily.py  test_tools_write_artifact.py
